<?xml version="1.0"?>
<package format="2">
  <name>p_rosbridge_server_cpp</name>
  <version>0.0.0</version>
  <description>The p_rosbridge_server_cpp package</description>

  <maintainer email="romain.reignier@exail.com">Romain Reignier</maintainer>
  <maintainer email="robin.vanhove@exail.com">Robin Vanhove</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>librosqt</build_depend>
  <build_depend>ros_babel_fish</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbridge_cpp_msgs</build_depend>
  <build_export_depend>librosqt</build_export_depend>
  <build_export_depend>ros_babel_fish</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosbridge_cpp_msgs</build_export_depend>
  <exec_depend>librosqt</exec_depend>
  <exec_depend>ros_babel_fish</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosbridge_cpp_msgs</exec_depend>

  <!--depend>mdt_msgs</depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
