<?xml version="1.0"?>
<package format="2">
  <name>p_rosbridge_server_cpp</name>
  <version>0.0.0</version>
  <description>The p_rosbridge_server_cpp package</description>

  <maintainer email="romain.reignier@exail.com">Romain Reignier</maintainer>
  <maintainer email="robin.vanhove@exail.com">Robin Vanhove</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-websockets-dev</depend>
  <depend>librosqt</depend>
  <depend>ros_babel_fish</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbridge_cpp_msgs</depend>

  <!--depend>mdt_msgs</depend-->

  <test_depend>python3-twisted</test_depend>
  <test_depend>python3-autobahn</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
