<?xml version="1.0"?>
<package format="2">
  <name>rosbridge_cpp_msgs</name>
  <version>0.0.0</version>
  <description>The rosbridge_cpp_msgs package</description>

  <maintainer email="romain.reignier@exail.com">Romain Reignier</maintainer>
  <maintainer email="robin.vanhove@exail.com">Robin Vanhove</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
